@@ -40,15 +40,15 @@ for pkg in $ALL_PKGS; do
     fi
     if [ -f $src_dir/$pkg/shlib-dirs.ac ]; then
       for dir in `cat $src_dir/$pkg/shlib-dirs.ac`; do
-	LD_LIBRARY_PATH=$this_dir/$pkg/$dir:$LD_LIBRARY_PATH
+	LTDL_LIBRARY_PATH=$this_dir/$pkg/$dir:$LTDL_LIBRARY_PATH
       done
     else
-      LD_LIBRARY_PATH=$this_dir/$pkg/gnome/gw:$LD_LIBRARY_PATH
+      LTDL_LIBRARY_PATH=$this_dir/$pkg/gnome/gw:$LTDL_LIBRARY_PATH
     fi
     PKG_CONFIG_PATH=$this_dir/$pkg:$PKG_CONFIG_PATH
   fi
 done
 
-export GUILE_LOAD_PATH LD_LIBRARY_PATH PKG_CONFIG_PATH
+export GUILE_LOAD_PATH LTDL_LIBRARY_PATH PKG_CONFIG_PATH
 
 exec "$@"
